--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
+    "@tsconfig/node20": "^20.1.4",
     "@types/node": "^22.10.1",
     "@types/react": "^18.3.12",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "@types/react-dom": "^18.3.1",
+    "@types/rollup": "^0.54.0",
     "@vitejs/plugin-react": "^4.3.4",
     "autoprefixer": "^10.4.20",
     "eslint": "^9.15.0",
